# json_partial

bindings/python/: pyproject.toml
